--- a/app/meals/page.module.css
+++ b/app/meals/page.module.css
@@ -37,6 +37,10 @@
   text-decoration: none;
 }
 
+.main {
+  min-height: 80vh;
+}
+
 .loading {
   text-align: center;
   animation: loading 1.2s ease-in-out infinite;
