--- a/app/globals.css
+++ b/app/globals.css
@@ -13,6 +13,10 @@ body {
   background: radial-gradient(#282c34, #282c34);
 }
 
+main {
+  min-height: 64.8vh;
+}
+
 .not-found,
 .error {
   margin-top: 5rem;
@@ -21,25 +25,25 @@ body {
 
 .not-found h1,
 .error h1 {
-  font-size: 5rem;
-  margin: 0px;
-  font-weight: 900;
-  color: #262626;
-  text-transform: uppercase;
-  background: linear-gradient(90deg, #f9572a, #ffc905);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  background-clip: text;
-  background-size: cover;
-  background-position: center;
+  font-size: 1.5rem;
+  font-size: clamp(1.5rem, 1.3333333333333333rem + 0.6666666666666667vw, 2rem);
+  margin: 0;
+  font-weight: bold;
+  color: #ddd8d8;
   font-family: 'Montserrat', sans-serif;
 }
 
 .not-found p,
 .error p {
-  font-size: 1.5rem;
+  font-size: 1rem;
+  font-size: clamp(1rem, 0.8333333333333333rem + 0.6666666666666667vw, 1.5rem);
   font-weight: 500;
   color: #ddd8d8;
+}
+
+.not-found img {
+  width: 80%;
+  max-width: 40rem;
 }
 
 ::-webkit-scrollbar {
