--- a/app/meals/[meal]/page.module.css
+++ b/app/meals/[meal]/page.module.css
@@ -70,6 +70,7 @@
   font-size: clamp(1rem, 0.8333333333333333rem + 0.6666666666666667vw, 1.5rem);
   line-height: 1.5;
   background-color: #6e6464;
+  font-weight: bold;
   color: #13120f;
   border-radius: 8px;
   box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.5);
